# Datasci210-capstone

./: README.md
analysis-individual/AL/: FNSPID_EDA.ipynb  Sentiment_Predictions_w_Imputed_Values.parquet  Sentiment_Predictions_w_Null_Values.parquet  app_mockup.py  app_mockup_Mar_4.py  polygon_news_API.ipynb
analysis-individual/AL/streamlit/: Sentiment_Predictions_w_Imputed_Values.parquet  app_mockup_Mar_17.py
analysis-individual/EK/: news_scraping.ipynb  reddit_wallstreetbets_2020_2023.csv  text_eda.ipynb
analysis-individual/EK/benchmark/: pyproject.toml
analysis-individual/EK/benchmark/src/: ds210_ml_portf_data_retrieval.py  main.py  model.py
analysis-individual/EK/dsp-api/: api-test.ipynb  pyproject.toml
analysis-individual/EK/dsp-api/src/: benchmark.py  dlmodel.py  ds210_DL_model_deploy_v1.ipynb  ds210_ml_portf_benchmark_model_sm_3.ipynb  main.py
analysis-individual/EK/sagemaker_base/: framework_fitting.ipynb  requirements.txt  train.py
analysis-individual/IN/: datasci210-prj-IN.ipynb  ds210_DL_model_deploy_v1.ipynb  ds210_DL_model_deploy_v2.ipynb  ds210_initial_data_EDA_IN.ipynb  ds210_ml_portf_DL_model_sm_7_clean_2.ipynb  ds210_ml_portf_benchmark_model.ipynb  ds210_ml_portf_benchmark_model_sm_2.ipynb  ds210_ml_portf_benchmark_model_sm_3.ipynb  ds210_ml_portf_benchmark_model_sm_4.ipynb  ds210_ml_portf_benchmark_model_sm_5.ipynb  ds210_ml_portf_data_retrieval.ipynb  ds210_ml_portf_data_retrieval.py
analysis-individual/MK/: FNSPID_x_NYT_RFR.ipynb  app_mockup_modified.py
code-combined/: README.md
code-combined/Deep Learning Model/: README.md  ds210_benchmark_model.ipynb
code-combined/Infrastructure/: README.md
code-combined/Sentiment Model/: README.md
code-combined/Streamlit MVP/: app_mockup.py  requirements.txt  styles.py  theme.py
(+25 files in other folders)
