[project]
name = "capstone_benchmark"
version = "0.1.0"
description = ""
authors = [
    {name = "Elaine Keung",email = "ekeung@berkeley.edu"}
]
readme = "README.md"
requires-python = "~3.11"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "ruff (>=0.9.10,<0.10.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "pyportfolioopt (>=1.5.6,<2.0.0)",
    "cvxpy (>=1.6.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "dill (>=0.3.9,<0.4.0)"
]

[tool.poetry]
packages = [{include = "src", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
